--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <h1 class="title-blue">My report's links</h1>
                     </div>
                     <p><b>The link to my website:</b><br> https://ajking02008.github.io/IT_World.github.io/</p>
-                    <p><b>The link to my github repository:</b><br>https://github.com/ajking02008/The_IT_World.github.io </p>
+                    <p><b>The link to my github repository:</b><br>https://github.com/ajking02008/IT_World.github.io </p>
                 </div>
                 <div class="col-md-6" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
                     <div class="featured-img">
@@ -524,15 +524,11 @@
             </div> 
             <div data-aos="fade-right" data-aos-delay="200" data-aos-duration="800"> 
                 <h1 class="title-primary" id="Work">IT Work</h1>
-                <video width="320" height="240" controls>
-                    <source src="main_assets/video/interview1.mp4" type="video/mp4">
-                  Your browser does not support the video.
-                </video>
+                <iframe width="560" height="315" style="margin-left: 30%;" src="https://www.youtube.com/embed/nb2MagRAKSI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p style="margin-left: 50%;">IT Work - Interview 1</p>
                 <br><br>
-                <audio controls>
-                    <source src="main_assets/video/IMG_0434.MOV" type="audio/ogg">
-                Your browser does not support the audio.
-                </audio>
+                <iframe width="560" height="315" style="margin-left: 30%;" src="https://www.youtube.com/embed/WBgq_SBE1CI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p style="margin-left: 50%;">IT Work - Interview 2</p>
             </div>   
         </div>
     </section>
